fix layout issues

--- a/sass/og-svg-view-demo.scss
+++ b/sass/og-svg-view-demo.scss
@@ -1,7 +1,7 @@
 watch-list .content{
     padding: 0 0.5em;
     .header{
-        font-size: 1.4em;
+        font-size: 1.3em;
         font-weight: bold;
         margin-bottom: 0.5em;
         display:block;
