--- a/sass/og-svg-view.scss
+++ b/sass/og-svg-view.scss
@@ -47,17 +47,22 @@
 
 :host{
     display: block;    
-    height: 300px;
+    height: 600px;
     overflow: hidden;
 }
 .container{
     position: relative;
+    height: 100%;
+    #watch-list-wrapper{
+        position: absolute;
+        width:100%;
+        bottom: 0;
+    }
     #watch-list{
         width: 100%;
         position: absolute;
         bottom: 0;
-        left: 0;
-        background: red;
+        left: 0;        
     }
     #svg{
         width: 100%;
