--- a/sass/watch-list.scss
+++ b/sass/watch-list.scss
@@ -49,13 +49,13 @@
     display: block;    
     min-height: 150px;
     overflow: hidden;
-    background-color: lightgrey;
+    background-color: #f9f6f6;
+    color: #5d707d;
 }
 .title{
     margin-left: 0.5em;
     font-size: 1.5em;
-    font-weight: bold;
-    color: #5d707d;
+    font-weight: bold;    
 }
 .container{
     clear: both;
